yet more HTML markup errors to fix

--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -103,7 +103,7 @@ id: from
       Note that there is also a <code>from</code> operator that is a method of the optional
       <code>StringObservable</code> class. It converts a stream of characters or a
       <code>Reader</code> into an Observable that emits byte arrays or Strings.
-     </p>
+     </p></figcaption>
     </figure>
     <p>
      In the separate <code>RxJavaAsyncUtil</code> package, which is not included by default with RxGroovy, there
@@ -221,7 +221,7 @@ Sequence complete</pre></div>
       Note that there is also a <code>from</code> operator that is a method of the optional
       <code>StringObservable</code> class. It converts a stream of characters or a
       <code>Reader</code> into an Observable that emits byte arrays or Strings.
-     </p>
+     </p></figcaption>
     </figure>
     <p>
      In the separate <code>RxJavaAsyncUtil</code> package, which is not included by default with RxJava, there
