--- a/rxscala/scaladoc/rx/lang/scala/subscriptions/CompositeSubscription.html
+++ b/rxscala/scaladoc/rx/lang/scala/subscriptions/CompositeSubscription.html
@@ -348,7 +348,7 @@ or unsubscribes immediately is the <a href="" class="extype" name="rx.lang.scala
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Any</dd></dl></div>
-    </li><li name="rx.lang.scala.subscriptions.CompositeSubscription#isUnsubscribed" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+    </li><li name="rx.lang.scala.Subscription#isUnsubscribed" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="isUnsubscribed:Boolean"></a>
       <a id="isUnsubscribed:Boolean"></a>
       <h4 class="signature">
@@ -365,7 +365,7 @@ or unsubscribes immediately is the <a href="" class="extype" name="rx.lang.scala
       </a>
     </span>
       <p class="shortcomment cmt">Checks if the subscription is unsubscribed.</p><div class="fullcomment"><div class="comment cmt"><p>Checks if the subscription is unsubscribed.
-</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="rx.lang.scala.subscriptions.CompositeSubscription">CompositeSubscription</a> → <a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
+</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
     </li><li name="scala.AnyRef#ne" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="ne(x$1:AnyRef):Boolean"></a>
       <a id="ne(AnyRef):Boolean"></a>
@@ -451,7 +451,7 @@ or unsubscribes immediately is the <a href="" class="extype" name="rx.lang.scala
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
-    </li><li name="rx.lang.scala.subscriptions.CompositeSubscription#unsubscribe" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+    </li><li name="rx.lang.scala.Subscription#unsubscribe" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="unsubscribe():Unit"></a>
       <a id="unsubscribe():Unit"></a>
       <h4 class="signature">
@@ -470,7 +470,7 @@ or unsubscribes immediately is the <a href="" class="extype" name="rx.lang.scala
       <p class="shortcomment cmt">Call this method to stop receiving notifications on the Observer that was registered when
 this Subscription was received.</p><div class="fullcomment"><div class="comment cmt"><p>Call this method to stop receiving notifications on the Observer that was registered when
 this Subscription was received.
-</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="rx.lang.scala.subscriptions.CompositeSubscription">CompositeSubscription</a> → <a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
+</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
     </li><li name="scala.AnyRef#wait" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="wait():Unit"></a>
       <a id="wait():Unit"></a>
