--- a/rxscala/scaladoc/rx/lang/scala/subscriptions/MultipleAssignmentSubscription.html
+++ b/rxscala/scaladoc/rx/lang/scala/subscriptions/MultipleAssignmentSubscription.html
@@ -310,7 +310,7 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Any</dd></dl></div>
-    </li><li name="rx.lang.scala.subscriptions.MultipleAssignmentSubscription#isUnsubscribed" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+    </li><li name="rx.lang.scala.Subscription#isUnsubscribed" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="isUnsubscribed:Boolean"></a>
       <a id="isUnsubscribed:Boolean"></a>
       <h4 class="signature">
@@ -327,7 +327,7 @@
       </a>
     </span>
       <p class="shortcomment cmt">Checks if the subscription is unsubscribed.</p><div class="fullcomment"><div class="comment cmt"><p>Checks if the subscription is unsubscribed.
-</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="rx.lang.scala.subscriptions.MultipleAssignmentSubscription">MultipleAssignmentSubscription</a> → <a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
+</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
     </li><li name="scala.AnyRef#ne" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="ne(x$1:AnyRef):Boolean"></a>
       <a id="ne(AnyRef):Boolean"></a>
@@ -448,7 +448,7 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
-    </li><li name="rx.lang.scala.subscriptions.MultipleAssignmentSubscription#unsubscribe" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+    </li><li name="rx.lang.scala.Subscription#unsubscribe" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="unsubscribe():Unit"></a>
       <a id="unsubscribe():Unit"></a>
       <h4 class="signature">
@@ -467,7 +467,7 @@
       <p class="shortcomment cmt">Call this method to stop receiving notifications on the Observer that was registered when
 this Subscription was received.</p><div class="fullcomment"><div class="comment cmt"><p>Call this method to stop receiving notifications on the Observer that was registered when
 this Subscription was received.
-</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="" class="extype" name="rx.lang.scala.subscriptions.MultipleAssignmentSubscription">MultipleAssignmentSubscription</a> → <a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
+</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="../Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a></dd></dl></div>
     </li><li name="scala.AnyRef#wait" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="wait():Unit"></a>
       <a id="wait():Unit"></a>
